# ArchiFlow

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PPT_AGENT.md  README.md  WEB_APP_README.md  app.py  config.yaml.template  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  run_dev.py  setup.bat  setup.sh  test_alternative_search.py  test_web_search_simple.py
data/: descriptions.json  outline.json
data/images/ppt_Animation_history_demo/: descriptions.json  outline.json
data/sessions/ppt_1766344072/: descriptions.json  outline.json
demos/comic_Awakening_AI/: comic_spec.md
frontend-prototype/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend-prototype/src/: App.tsx  index.css
integration_tests/: README.md  __init__.py  test_date_context.py  test_original_simpleagent_date.py  test_simple_agent_repl.py  test_simplev2_integration.py  test_web_fetch.py  test_web_fetch_env_provider.py  test_web_fetch_integration.py  test_web_fetch_mock.py  test_web_search_fix.py  test_web_search_integration.py
src/agent_cli/: __init__.py  __main__.py  main.py
src/agent_framework/: __init__.py  agent_controller.py  agent_runner.py  agent_session.py  coding_agent_runner.py  context.py
src/message_queue/: __init__.py  broker.py  exceptions.py  message.py  metrics.py
src/web_backend/: .env.example  __init__.py  config.py  main.py  requirements-web.txt
tests/: conftest.py  demo_npx_http_server.py  manual_test_vagueness_ui.py  test_agent_factory_integration.py  test_agents.py  test_basic.py  test_cli.py  test_commands.py  test_dynamic_system_prompt.py  test_integration.py  test_llm_prompt_improver.py  test_llm_vagueness_detector.py  test_output.py  test_repl.py  test_repl_messaging.py  test_repl_vagueness_integration.py  test_session.py  test_shell_context.py  test_simple_agent_v2.py  test_system_commands.py  test_vagueness_detector.py
tests/agent_framework/: __init__.py  test_context.py  test_project_directory_integration.py
tests/integration/: __init__.py  test_hierarchy_e2e.py  test_history_compaction.py  test_history_performance.py  test_phase3_integration.py  test_review_workflow.py
tests/llm/: __init__.py  test_google_image_provider.py  test_image_provider_base.py  test_openai_image_provider.py
tests/manual/: test_google_image_reference.py  test_sandbox_runtime_manual.py  verify_agent_sandbox_integration.py  verify_archiflow_context.py  verify_phase1_hierarchy.py  verify_phase2_hierarchy.py  verify_phase3_agent_integration.py
tests/message_queue/: TEST_SUMMARY.md  __init__.py  test_broadcast.py  test_integration_aol_persistence.py  test_integration_file_persistence.py  test_phase1_core.py  test_phase2_metrics.py  test_phase3_pubsub.py  test_phase4_workers.py  test_phase5_dlq.py  test_phase6_admin.py  test_phase7_lifecycle.py  test_phase8_integration.py  test_storage_aol.py  test_storage_file.py  test_storage_memory.py
tests/web_backend/: __init__.py  conftest.py  manual_test_guide_phase3.md  test_adapters.py  test_agent_registry.py  test_agent_runner.py  test_agent_session_manager.py  test_agents.py  test_artifact_service.py  test_audit_logger.py  test_broker_integration.py  test_comments.py  test_config.py  test_health.py  test_messages.py  test_models.py  test_phase3_integration.py  test_sandbox.py  test_sessions.py  test_storage_manager.py  test_web_agent_factory.py  test_web_agent_factory_integration.py  test_web_session_broker.py  test_websocket.py  test_websocket_manager.py  test_workflow_controller.py  test_workspace_manager.py
(+352 files in other folders)
